--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.4",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
